fixed cropping

--- a/components/Products/styles.module.scss
+++ b/components/Products/styles.module.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 40px;
+  padding: 40px 0 40px;
   max-width: 1200px;
   margin: 0 auto;
   @media screen and (min-width: 800px) {
@@ -12,7 +12,7 @@
 }
 
 .products {
-  padding: 40px 0 0;
+  padding: 40px 20px 0;
   display: grid;
   grid-template-columns: repeat(2, calc(50% - 3px));
   gap: 6px;
