--- a/components/shared/Tags/styles.module.scss
+++ b/components/shared/Tags/styles.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   gap: 26px;
   overflow-x: auto;
+  padding: 0 20px;
 }
 
 .tag {
